--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,8 +10,7 @@
 include: package:flutter_lints/flutter.yaml
 
 analyzer:
-  enable-experiment:
-    - inline-class
+  enable-experiment: []
 
 linter:
   # The lint rules applied to this project can be customized in the
